--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,17 @@ footer {
     color: white;
     padding: 1rem 0;
 }
+
+.sidebar {
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 250px;
+    background-color: #f8f9fa;
+    padding-top: 20px;
+}
+
+.content {
+    margin-left: 250px;
+}
