--- a/css/style.css
+++ b/css/style.css
@@ -6,20 +6,9 @@ body {
 .content {
     flex: 1;
 }
-footer {
-    background-color: #8b8b8b;
-    color: white;
-    padding: 1rem 0;
-}
 
-.sidebar {
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 250px;
-    background-color: #f8f9fa;
-    padding-top: 20px;
+.title-h1 {
+font-family: 'Times New Roman', Times, serif;
 }
 
 .content {
